# Cards

./: .gitignore  README.md  cards.py  pyproject.toml
.github/workflows/: macos.yaml  ubuntu.yaml  ubuntu.yml  windows.yaml
cards/: __main__.py  cards.py
docs/: RESOURCES.md
scripts/: distribute.sh
tests/: test_cards.py
