[tool.poetry]
name = "cards"
version = "0.1.0"
description = ""
authors = ["James Power <jep@lepoer.us>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyMuPDF = "^1.19.1"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
black = "^21.11b1"
pyinstaller = "^4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
